--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -21,7 +21,7 @@ def flutterVersionName = localProperties.getProperty('flutter.versionName')
 if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
-    
+
 android {
     namespace "com.example.ret_01"
     compileSdkVersion 34
@@ -45,8 +45,8 @@ android {
         applicationId "com.example.ret_01"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
-        targetSdkVersion flutter.targetSdkVersion
+        minSdkVersion 23
+        targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
@@ -58,7 +58,6 @@ android {
             signingConfig signingConfigs.debug
         }
     }
-
 }
 
 flutter {
@@ -66,6 +65,4 @@ flutter {
 }
 
 dependencies {}
-
-
 apply plugin: 'com.google.gms.google-services'
