--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,5 +1,9 @@
 workflows:
   android-release:
-    name: Build Android Release
     environment:
       flutter: 3.13.1
+    scripts:
+      - flutter pub get
+      - flutter build apk --release
+    artifacts:
+      - build/app/outputs/flutter-apk/app-release.apk
