--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,15 +23,13 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace "com.example.ret_01"
-    compileSdkVersion 34
-    ndkVersion "26.1.10909125"
+    namespace "com.example.ret_03"
+    compileSdkVersion flutter.compileSdkVersion
+    ndkVersion flutter.ndkVersion
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
-        // Ativa o core library desugaring
-        coreLibraryDesugaringEnabled true        
     }
 
     kotlinOptions {
@@ -44,12 +42,11 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.ret_01"
-        multiDexEnabled true
+        applicationId "com.example.ret_03"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion 21
-        targetSdkVersion 34
+        minSdkVersion flutter.minSdkVersion
+        targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
@@ -59,8 +56,6 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
-            minifyEnabled false
-            shrinkResources false
         }
     }
 }
@@ -69,8 +64,4 @@ flutter {
     source '../..'
 }
 
-dependencies {
-    implementation 'androidx.multidex:multidex:2.0.1'
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.3'
-}
-apply plugin: 'com.google.gms.google-services'
+dependencies {}
