--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,20 +35,20 @@ dependencies:
   permission_handler: ^11.0.1
   firebase_analytics: ^10.7.0
   flutter_app_badger: ^1.5.0
-#  shared_preferences: ^2.0.0
+  shared_preferences: ^2.0.0
 #  flutter_local_notifications: ^9.4.0
-#  flutter_inappwebview: ^5.3.2
+  flutter_inappwebview: ^5.3.2
 
 
-  flutter_inappwebview: ^5.7.2+3
-  #flutter_local_notifications: ^12.0.4
+ # flutter_inappwebview: ^5.7.2+3
+  flutter_local_notifications: ^12.0.4
   #shared_preferences: 2.0.8
 #  flutter_inappwebview: 5.4.3+7
   #  webview_flutter: ^4.5.0
-#  flutter_local_notifications: ^18.0.1
-  shared_preferences: ^2.2.2
+ # flutter_local_notifications: ^18.0.1
+#  shared_preferences: ^2.2.2
   #flutter_inappwebview: ^6.0.0
-  flutter_local_notifications: ^16.1.0
+#  flutter_local_notifications: ^16.1.0
 #  shared_preferences: ^2.2.0
 
   # The following adds the Cupertino Icons font to your application.
